chore: add og-image.webp

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <!-- meta settings start -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      property="description"
-      content="This is a template of meta information."
-    />
-    <meta name="keyword" content="html, 'meta information', template" />
+    <meta property="description" content="description" />
+    <meta name="keyword" content="keyword" />
     <meta name="theme-color" content="rgb(0, 0, 0)" />
     <!-- meta settings end -->
     <!-- icon start -->
@@ -16,12 +13,9 @@
     <!-- icon end -->
     <!-- OG setting start -->
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:title" content="Document" />
-    <meta
-      property="og:description"
-      content="This is a template of meta information."
-    />
+    <meta property="og:site_name" content="site_name" />
+    <meta property="og:title" content="title" />
+    <meta property="og:description" content="description" />
     <meta property="og:image" content="/og-image.webp" />
     <meta property="og:image:width" content="" />
     <meta property="og:image:height" content="" />
@@ -33,7 +27,9 @@
     <meta name="twitter:site" content="@yuki_osada0808" />
     <meta name="twitter:creator" content="@yuki_osada0808" />
     <!-- Twitter card settings end -->
-    <title>Document</title>
+    <title>title</title>
   </head>
-  <body></body>
+  <body>
+    Hello, World!
+  </body>
 </html>
