--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,25 @@
     <meta name="theme-color" content="rgb(0, 0, 0)" />
     <!-- meta settings end -->
     <!-- icon start -->
-    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link
+      rel="icon"
+      href="/assets/favicon.ico"
+      type="image/vnd.microsoft.icon"
+      sizes="any"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="/assets/manifest.json" />
     <!-- icon end -->
     <!-- OG setting start -->
     <meta property="og:locale" content="ja_JP" />
