--- a/src/index.html
+++ b/src/index.html
@@ -12,31 +12,41 @@
     <link
       rel="icon"
       type="image/png"
-      href="/assets/favicon-96x96.png"
+      href="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/favicon-96x96.png"
       sizes="96x96"
     />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link
       rel="icon"
-      href="/assets/favicon.ico"
+      type="image/svg+xml"
+      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/favicon.svg"
+    />
+    <link
+      rel="icon"
+      href="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/favicon.ico"
       type="image/vnd.microsoft.icon"
       sizes="any"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/apple-touch-icon.png"
+      href="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/apple-touch-icon.png"
     />
-    <link rel="manifest" href="/assets/manifest.json" />
+    <link
+      rel="manifest"
+      href="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/manifest.json"
+    />
     <!-- icon end -->
     <!-- OG setting start -->
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:site_name" content="site_name" />
     <meta property="og:title" content="title" />
     <meta property="og:description" content="description" />
-    <meta property="og:image" content="/og-image.webp" />
-    <meta property="og:image:width" content="" />
-    <meta property="og:image:height" content="" />
+    <meta
+      property="og:image"
+      content="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/og-image.webp"
+    />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://example.com" />
     <!-- OG setting end -->
