--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,10 @@
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://example.com" />
+    <meta
+      property="og:url"
+      content="https://myxogastria0808.github.io/html-meta-settings/"
+    />
     <!-- OG setting end -->
     <!-- Twitter card settings start -->
     <meta name="twitter:card" content="summary_large_image" />
