--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta property="og:description" content="description" />
     <meta
       property="og:image"
-      content="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/og-image.webp"
+      content="https://github.com/Myxogastria0808/html-meta-settings/blob/main/src/assets/og-image.webp"
     />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
