--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/favicon-96x96.png"
+      href="https://myxogastria0808.github.io/html-meta-settings/assets/favicon-96x96.png"
       sizes="96x96"
     />
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/favicon.svg"
+      href="https://myxogastria0808.github.io/html-meta-settings/assets/favicon.svg"
     />
     <link
       rel="icon"
-      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/favicon.ico"
+      href="https://myxogastria0808.github.io/html-meta-settings/assets/favicon.ico"
       type="image/vnd.microsoft.icon"
       sizes="any"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/apple-touch-icon.png"
+      href="https://myxogastria0808.github.io/html-meta-settings/assets/apple-touch-icon.png"
     />
     <link
       rel="manifest"
-      href="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/manifest.json"
+      href="https://myxogastria0808.github.io/html-meta-settings/assets/manifest.json"
     />
     <!-- icon end -->
     <!-- OG setting start -->
@@ -45,7 +45,7 @@
     <meta property="og:image:height" content="512" />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/Myxogastria0808/html-meta-settings/refs/heads/main/src/assets/og-image.webp"
+      content="https://myxogastria0808.github.io/html-meta-settings/assets/og-image.webp"
     />
     <meta property="og:type" content="website" />
     <meta
